--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
   From minimalist sculptures to minimalist paintings, this blog will inspire you to appreciate the beauty that lies in simplicity.
 
   Annie Spratt -->
-
-    <div class="author-info">
-      Coded by <a href="#">Martins Ekwealor</a> | Challenge by
-      <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
-        >devChallenges.io</a
-      >.
-    </div>
-
-    <div class="flex-container">
-      <div class="flex-box">
-        <img src="./resources/Cactus.jpg" alt="display-pics" />
-        <p>Design</p>
-        <p>Embracing Minimalism</p>
-        <p>
-          From minimalist sculptures to minimalist paintings, this blog will
-          inspire you to appreciate the beauty that lies in simplicity.
-        </p>
-        <p>Annie Spratt</p>
+    <header>
+      <div class="author-info">
+        Coded by <a href="#">Martins Ekwealor</a> | Challenge by
+        <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
+          >devChallenges.io</a
+        >.
       </div>
-    </div>
+    </header>
+    <main>
+      <div class="flex-container">
+        <div class="flex-box">
+          <img src="./resources/Cactus.jpg" alt="display-pics" />
+          <p>Design</p>
+          <p>Embracing Minimalism</p>
+          <p>
+            From minimalist sculptures to minimalist paintings, this blog will
+            inspire you to appreciate the beauty that lies in simplicity.
+          </p>
+          <p>Annie Spratt</p>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
